cmake_minimum_required(VERSION 3.27)
project(uz_repository)

set(CMAKE_CXX_STANDARD 14)

add_executable(uz_repository
        lista_1/zad_1.cpp
        lista_1/zad_10.cpp
        lista_1/zad_11.cpp
        lista_1/zad_12.cpp
        lista_1/zad_13.cpp
        lista_1/zad_14.cpp
        lista_1/zad_15.cpp
        lista_1/zad_16.cpp
        lista_1/zad_17.cpp
        lista_1/zad_18.cpp
        lista_1/zad_19.cpp
        lista_1/zad_2.cpp
        lista_1/zad_3.cpp
        lista_1/zad_4.cpp
        lista_1/zad_5.cpp
        lista_1/zad_6.cpp
        lista_1/zad_7.cpp
        lista_1/zad_8.cpp
        lista_1/zad_9.cpp
        ../../../CLionProjects/lista_1/zad_1.cpp
        ../../../CLionProjects/lista_1/zad_2.cpp
        ../../../CLionProjects/lista_1/zad_11.cpp
        ../../../CLionProjects/lista_1/zad_18.cpp)
