cmake_minimum_required(VERSION 3.27)
project(lab_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab_1
        #zad_1.cpp
        #zad_2.cpp
        #zad_3.cpp
        #zad_4.cpp
        #zad_5.cpp
        #zad_6.cpp
        #zad_7.cpp
        #zad_8.cpp
        #zad_9.cpp
        #zad_10.cpp
        #zad_11.cpp
        #zad_12.cpp
        #zad_13.cpp
        #zad_14.cpp
        #zad_15.cpp
        #zad_16.cpp
        #zad_17.cpp
        #zad_18.cpp
        zad_19.cpp)
