cmake_minimum_required(VERSION 3.27)
project(lab_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab_1
        #zad_01.cpp
        #zad_02.cpp
        #zad_03.cpp
        #zad_04.cpp
        #zad_05.cpp
        #zad_06.cpp
        #zad_07.cpp
        #zad_08.cpp
        #zad_09.cpp
        #zad_10.cpp
        #zad_11.cpp
        #zad_12.cpp
        #zad_13.cpp
        #zad_14.cpp
        #zad_15.cpp
        #zad_16.cpp
        #zad_17.cpp
        #zad_18.cpp
        zad_19.cpp
)
